<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".BMICalActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icons8_aed_48" />

    <TextView
        android:id="@+id/UserNametxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomest"
        android:textAlignment="center"
        android:background="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@+id/imageView"
        tools:layout_editor_absoluteX="43dp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logoutst"
        android:layout_below="@+id/MyBMI"/>

    <Button
        android:id="@+id/BMICal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserNametxt"
        android:text="@string/bmicalst" />

    <Button
        android:id="@+id/MyBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BMICal"
        android:text="@string/mybmist" />

    <EditText
        android:id="@+id/Height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/heightst"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Height"
        android:layout_centerInParent="true"
        android:hint="@string/Weightst"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/Cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/Weight"
        android:text="OK" />

    <TextView
        android:id="@+id/Resulttxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Cal"
        android:layout_centerInParent="true"
        android:hint="Result"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/advice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Resulttxt"
        android:layout_centerInParent="true"
        android:text=""
        android:textAlignment="center"
        android:textSize="32sp" />

    <Button
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/advice"
        android:layout_centerInParent="true"
        android:text="@string/uploadst" />


</RelativeLayout>